--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -426,6 +426,7 @@ html {
 }
 .og-expander-inner {
     border: 1px #c2c2c2 solid;
+    background-color: #fff;
     border-radius: 4px;
     padding: 16px;
     height: 100%;
